# ITMO

./: .env_example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  business_understanding.md  docker-compose.yml  medtech_models.ipynb  product_prototype.md  pyroject.toml  requirements.txt
graph/: Makefile  README.md  conftest.py  docker-compose-sentry.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
graph/db_init/: secret_settings.json  speciality.json
graph/deploy/: Dockerfile_neo4j  config.env  docker-compose.prod.yml  generate_enc_key.py  initapp.sh  install.sh  obfuscation.sh  package.sh  package_ci.sh
graph/deploy/django/: Dockerfile
graph/deploy/nginx/: Dockerfile  config.sh  nginx.conf.template
graph/graph/: asgi.py  celeryapp.py  formatter.py  settings.py  test_migrations.py  urls.py  wsgi.py
graph/graph/apps/common/: admin.py  apps.py  authentication.py  ext_webservice_adapters.py  ext_webservice_auth.py  forms.py  models.py  tools.py  urls.py  views.py
graph/graph/apps/common/migrations/: 0001_initial.py
graph/graph/apps/common/tests/: test_key.pem  test_key.pub  test_neuro_adapter.py
graph/graph/apps/feature_classifier/: admin.py  apps.py  async_marking_features_protocols.py  marking_features_protocols.py  models.py  processing_medical_records.py  queries_db.py  tasks.py
graph/graph/apps/feature_classifier/migrations/: 0001_initial.py  0002_featureclassifier_annoy_score.py  0003_featureclassifier_gpt_description.py  0004_additionalfeatureclassifier.py  0005_alter_additionalfeatureclassifier_additional_feature.py  0006_descriptionfeature.py  0007_abbreviatedphrase.py
graph/graph/apps/medaggregator/: admin.py  apps.py  cypher_templates.py  enums.py  helpers.py  models.py  permissions.py  query_db.py  serializers.py  tasks.py  urls.py  views.py
graph/graph/apps/medaggregator/migrations/: 0001_initial.py  0002_patientmedcard_medcard_id_patientmedcard_user_id_and_more.py  0003_alter_patientmedcard_options_speciality_diagnosis_and_more.py  0004_alter_patientdigitalparam_options_and_more.py  0005_protocol_logging_from_marked_and_more.py  0006_protocol_is_medtest.py  0007_remove_protocol_unique_medcard_protocol_custom_id_and_more.py
graph/graph/apps/medaggregator/tests/: test_get_anamnesis_from_graph.py  test_get_structure.py  test_lk_api.py  test_models.py  test_neuro_api.py
graph/graph/apps/secret_settings/: admin.py  apps.py  models.py  tasks.py
graph/graph/apps/secret_settings/migrations/: 0001_initial.py
graph/graph/locale/ru/LC_MESSAGES/: django.mo  django.po
graph/graph/static/admin/css/: admin_color_graph.css
graph/graph/templates/admin/: base.html  custom_constance.html
graph/graph/utils/: constance.py  email.py  processing_medical_records.py  timing.py
graph/graph/utils/clients/: description_functions_for_processing_features.py  processing_of_anamnesis.py
graph/graph/utils/clients/annoy_recommender/: medical_records.py
graph/graph/utils/clients/annoy_similary/: annoy_build.py  save_annoy_indexes.py
graph/graph/utils/clients/clusterization/: clustering_important_features.py
graph/graph/utils/clients/cypher_validator/: Cypher.g4  CypherLexer.py  CypherParser.py  cypher_validator.py
graph/graph/utils/clients/gpt/: call_gigachat.py  call_gpt.py  helpers.py  prompts.py  serializers.py  tasks.py
graph/graph/utils/clients/graph_modifier/: entities_similary.py  graph_crawler.py
graph/graph/utils/clients/tests/: test_call_gpt.py  test_cypher_queries.py  test_cypher_validator.py  test_prompts.py
graph/graph/utils/neo/: add_fixtures_to_graphdb.py  add_protocols_with_attentions.py  create_neodisease_from_mkb10.py  crud_operator.py  date_checker.py  disease_mkb10_checker.py  pathnames.py  protocol_checker.py  read_data.py  regexp_cypher.py
graph/graph/utils/neo/data/: mkb_10_level.csv
graph/graph/utils/neo/tests/: test_date_checker.py
graph/test_init/: db_test.json
llm_app/: Makefile  README.md  conftest.py  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
llm_app/db_init/: secret_settings.json
llm_app/deploy/: config.env  connect_to_sentry.sh  docker-compose.prod.yml  init_llm.sh  initapp.sh  install.sh  package.sh  package_ci.sh
llm_app/deploy/Vllm/: Dockerfile
llm_app/deploy/django/: Dockerfile
llm_app/deploy/nginx/: Dockerfile  nginx.conf.template
llm_app/nlp/: asgi.py  celeryapp.py  formatter.py  gunicorn.conf.py  settings.py  test_migrations.py  urls.py  wsgi.py
llm_app/nlp/apps/common/: __init__.py  admin.py  apps.py  authentication.py  context_processors.py  ext_webservice_adapters.py  ext_webservice_auth.py  forms.py  mixins.py  models.py  urls.py
llm_app/nlp/apps/common/migrations/: 0001_initial.py  0002_alter_user_managers.py
llm_app/nlp/apps/common/services/: email.py  messages.py  tasks.py
llm_app/nlp/apps/protocol/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
llm_app/nlp/apps/protocol/migrations/: 0001_initial.py  0002_alter_protocol_options_protocol_service_id_and_more.py  0003_protocol_protocol_custom_id.py  0004_protocol_api_error_count_and_more.py  0005_parsingerror_error_type.py  0006_rename_error_text_parsingerror_traceback_and_more.py  0007_alter_parsingerror_traceback.py  0008_protocol_is_sent_to_graphdb.py  0009_protocolstructureerror.py  0010_protocol_is_saved_to_graphdb.py
llm_app/nlp/apps/protocol/tests/: test_graphdb_api.py  test_protocol_api.py
llm_app/nlp/apps/secret_settings/: __init__.py  admin.py  apps.py  models.py  tasks.py
llm_app/nlp/apps/secret_settings/migrations/: 0001_initial.py  0002_remove_prompt_user_text_alter_llmsettings_max_tokens.py  0003_llmsettings_name_alter_llmsettings_max_tokens.py  0004_alter_llmsettings_model.py  0005_dbstructure_globalprocessingsettings.py  0007_prompt_answer_format.py  (+4 more)
llm_app/nlp/templates/admin/: base.html  send_test_email.html
llm_app/nlp/templates/emails/: test_email.html
llm_app/nlp/utils/: constance.py  email.py
llm_app/nlp/utils/LLM/: Embedder.py  RAG.py  llm_answer_parsing.py  llm_rephrase.py  llm_request.py  prompts.py  tasks.py
(+167 files in other folders)
